Release 1.6

#35 Long / Integer values in HashMap keys
#55 DeleteTask - a new callback between getting source keys and matching them against targets
#64 Allow mapping source columns to non-persistent target properties
#73 Reloadable extractors do not reload
#75 JSON extractor
#79 Upgrade to Cayenne 4.0.M3
#80 Start making releases to Maven central

Release 1.5

#56 Support for non printable delimiter characters in CSV extractor
#59 Transient target path support
#61 Delete task @AfterTargetsMapped listener is missing

Release 1.4

 #1 XML extractor support
#36 CSV extractors
#41 Automatic mapping of row attributes
#42 Multi-extractor configs
#43 Deprecate/remove explicit relationship mapping from CreateOrUpdateBuilder
#44 Straighten mapping by ID
#46 Cayenne upgrade to 4.0.M3.debfa94
#49 Matchers must handle expression invariants in Rows
#50 XML Schema for extractor configs
#51 Normalize 'sources' map keys
#52 Descriptor versioning
#53 FileExtractorModelLoader - a file-based IExtractorModelLoader
#54 Rename LinkETL to LinkMove

Release 1.3 2015-04-09

#23 Support for "delete" of targets missing in the source
#25 Parameterized queries for Extractors
#26 Refactoring ETL stack to expose processing chain in the object design
#27 Upgrade to official Cayenne 4.0.M2
#28 Refactor TaskBuilder to be able to split it into specialized builders 
#30 Execution refactoring: split stats in a separate class
#31 Execution: support for a map of arbitrary 'attributes'
#32 Task stage listeners
#33 SourceKeysTask: a task for extraction of source keys
#34 Stop supporting positional parameters in Extractor templates


Release 1.2 2014-12-08

#24 Upgrade Cayenne dependency to 4.0.M2.1ab1caa

Release 1.1 2014-10-23

#8 'MatchingTaskBuilder.matchBy' to take Property<?> instead of String
#9 Matcher refactoring
#10 KeyBuilder refactoring - renaming to KeyMapAdapter
#11 Rename MatchingTaskBuilder.matchByPrimaryKey to matchById
#13 EtlAdapter to package extensions to LinkETL