@@ -1,12 +1,10 @@
 package com.nhl.link.move;
 
-import org.apache.cayenne.DataObject;
 import org.apache.cayenne.exp.Property;
 
 import com.nhl.link.move.annotation.AfterSourceRowsConverted;
 import com.nhl.link.move.annotation.AfterSourcesMapped;
 import com.nhl.link.move.annotation.AfterTargetsMerged;
-import com.nhl.link.move.load.LoadListener;
 import com.nhl.link.move.mapper.Mapper;
 
 /**
@@ -15,7 +13,6 @@ import com.nhl.link.move.mapper.Mapper;
  * 
  * @since 1.3
  */
-@SuppressWarnings("deprecation")
 public interface CreateOrUpdateBuilder<T> {
 
 	/**
@@ -46,20 +43,10 @@ public interface CreateOrUpdateBuilder<T> {
 	 *            extractor configuration location, relative to some root known
 	 *            to LinkMove.
 	 * @since 1.3
-	 * @see CreateOrUpdateBuilder#sourceExtractor(String, String).
+	 * @see #sourceExtractor(String, String)
 	 * @return this builder instance
 	 */
 	CreateOrUpdateBuilder<T> sourceExtractor(String location);
-
-	/**
-	 * @param location
-	 *            extractor configuration location, relative to some root known
-	 *            to LinkMove.
-	 * @deprecated since 1.3 use {@link #sourceExtractor(String)}
-	 * @return this builder instance
-	 */
-	@Deprecated
-	CreateOrUpdateBuilder<T> withExtractor(String location);
 
 	/**
 	 * Instructs the task to match sources and targets using explicitly provided
@@ -103,71 +90,6 @@ public interface CreateOrUpdateBuilder<T> {
 	 * @return this builder instance
 	 */
 	CreateOrUpdateBuilder<T> batchSize(int batchSize);
-
-	/**
-	 * @param batchSize
-	 *            the size of an internal processing batch.
-	 * @deprecated since 1.3 use {@link #batchSize(int)}
-	 * @return this builder instance
-	 */
-	@Deprecated
-	CreateOrUpdateBuilder<T> withBatchSize(int batchSize);
-
-	/**
-	 * @param name
-	 * @param relatedObjType
-	 * @param keyAttribute
-	 * @deprecated since 1.4 the framework can find relationships in the
-	 *             existing Cayenne model.
-	 * @return this builder instance
-	 */
-	CreateOrUpdateBuilder<T> withToOneRelationship(String name, Class<? extends DataObject> relatedObjType,
-			String keyAttribute);
-
-	/**
-	 * @param name
-	 * @param relatedObjType
-	 * @param keyAttribute
-	 * @param relationshipKeyAttribute
-	 * @deprecated since 1.4 the framework can find relationships in the
-	 *             existing Cayenne model.
-	 * @return this builder instance
-	 */
-	CreateOrUpdateBuilder<T> withToOneRelationship(String name, Class<? extends DataObject> relatedObjType,
-			String keyAttribute, String relationshipKeyAttribute);
-
-	/**
-	 * @param name
-	 * @param relatedObjType
-	 * @param keyAttribute
-	 * @deprecated since 1.4. To-many relationships weren't handled and this
-	 *             method did nothing.
-	 * @return this builder instance
-	 */
-	CreateOrUpdateBuilder<T> withToManyRelationship(String name, Class<? extends DataObject> relatedObjType,
-			String keyAttribute);
-
-	/**
-	 * @param name
-	 * @param relatedObjType
-	 * @param keyAttribute
-	 * @param relationshipKeyAttribute
-	 * @deprecated since 1.4. To-many relationships weren't handled and this
-	 *             method did nothing.
-	 * @return this builder instance
-	 */
-	CreateOrUpdateBuilder<T> withToManyRelationship(String name, Class<? extends DataObject> relatedObjType,
-			String keyAttribute, String relationshipKeyAttribute);
-
-	/**
-	 * Adds a listener of ETL target events.
-	 * 
-	 * @param listener
-	 * @deprecated since 1.3 in favor of stage listeners.
-	 * @return this builder instance
-	 */
-	@Deprecated
-	CreateOrUpdateBuilder<T> withListener(LoadListener<T> listener);
 
 	/**
 	 * Adds a listener of transformation stages of batch segments. It should
