@@ -31,10 +31,4 @@ public interface ITaskService {
 	 * @since 1.4
 	 */
 	SourceKeysBuilder extractSourceKeys(String targetEntityName);
-
-	/**
-	 * @deprecated since 1.3 use {@link #createOrUpdate(Class)}.
-	 */
-	@Deprecated
-	<T extends DataObject> CreateOrUpdateBuilder<T> createTaskBuilder(Class<T> type);
 }
