@@ -7,6 +7,7 @@ Release 1.6
 #75 JSON extractor
 #79 Upgrade to Cayenne 4.0.M3
 #80 Start making releases to Maven central
+#81 Remove methods deprecated since 1.4 or earlier
 
 Release 1.5
 
